// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenditureVisualization Test Suite ExpenditureVisualization is rendering with editable table having 3 rows ! 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="mb-5"
    >
      <label
        class="columnName"
      >
        Translate to
      </label>
      <select
        class="form-control"
        data-testid="select"
      >
        <option
          data-testid="select-option"
          value="en"
        >
          English
        </option>
        <option
          data-testid="select-option"
          value="af"
        >
          Afrikaans
        </option>
        <option
          data-testid="select-option"
          value="bg"
        >
          Bulgarian
        </option>
        <option
          data-testid="select-option"
          value="hr"
        >
          Croatian
        </option>
        <option
          data-testid="select-option"
          value="cs"
        >
          Czech
        </option>
        <option
          data-testid="select-option"
          value="da"
        >
          Danish
        </option>
        <option
          data-testid="select-option"
          value="nl"
        >
          Dutch
        </option>
        <option
          data-testid="select-option"
          value="fr"
        >
          French
        </option>
        <option
          data-testid="select-option"
          value="de"
        >
          German
        </option>
        <option
          data-testid="select-option"
          value="el"
        >
          Greek
        </option>
        <option
          data-testid="select-option"
          value="hi"
        >
          Hindi
        </option>
        <option
          data-testid="select-option"
          value="ja"
        >
          Japanese
        </option>
        <option
          data-testid="select-option"
          value="ko"
        >
          Korean
        </option>
        <option
          data-testid="select-option"
          value="ru"
        >
          Russian
        </option>
        <option
          data-testid="select-option"
          value="sr"
        >
          Serbian
        </option>
        <option
          data-testid="select-option"
          value="sk"
        >
          Slovak
        </option>
        <option
          data-testid="select-option"
          value="es"
        >
          Spanish
        </option>
        <option
          data-testid="select-option"
          value="sv"
        >
          Swedish
        </option>
        <option
          data-testid="select-option"
          value="th"
        >
          Thai
        </option>
        <option
          data-testid="select-option"
          value="tr"
        >
          Turkish
        </option>
        <option
          data-testid="select-option"
          value="vi"
        >
          Vietnamese
        </option>
      </select>
    </div>
    <div
      class="table-container"
    >
      <table
        class="table table-borderless"
      >
        <thead>
          <tr>
            <td
              class="columnName"
            >
               
              InFlow
               
            </td>
            <td
              class="columnName"
            >
               
              OutFlow
               
            </td>
            <td
              class="columnName"
            >
               
              Amount
               
            </td>
            <td>
              <button
                class="btn btn-success"
                type="button"
              >
                ADD
              </button>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Stocks"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Savings"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="25"
              />
            </td>
            <td>
              <button
                class="btn btn-danger"
                type="button"
              >
                DEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Gold"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Savings"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="10"
              />
            </td>
            <td>
              <button
                class="btn btn-danger"
                type="button"
              >
                DEL
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="mt-5 mb-5"
    />
  </div>
</div>
`;

exports[`ExpenditureVisualization Test Suite on api fail app renders without crash 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="mb-5"
    >
      <label
        class="columnName"
      >
        Translate to
      </label>
      <select
        class="form-control"
        data-testid="select"
      >
        <option
          data-testid="select-option"
          value="en"
        >
          English
        </option>
        <option
          data-testid="select-option"
          value="af"
        >
          Afrikaans
        </option>
        <option
          data-testid="select-option"
          value="bg"
        >
          Bulgarian
        </option>
        <option
          data-testid="select-option"
          value="hr"
        >
          Croatian
        </option>
        <option
          data-testid="select-option"
          value="cs"
        >
          Czech
        </option>
        <option
          data-testid="select-option"
          value="da"
        >
          Danish
        </option>
        <option
          data-testid="select-option"
          value="nl"
        >
          Dutch
        </option>
        <option
          data-testid="select-option"
          value="fr"
        >
          French
        </option>
        <option
          data-testid="select-option"
          value="de"
        >
          German
        </option>
        <option
          data-testid="select-option"
          value="el"
        >
          Greek
        </option>
        <option
          data-testid="select-option"
          value="hi"
        >
          Hindi
        </option>
        <option
          data-testid="select-option"
          value="ja"
        >
          Japanese
        </option>
        <option
          data-testid="select-option"
          value="ko"
        >
          Korean
        </option>
        <option
          data-testid="select-option"
          value="ru"
        >
          Russian
        </option>
        <option
          data-testid="select-option"
          value="sr"
        >
          Serbian
        </option>
        <option
          data-testid="select-option"
          value="sk"
        >
          Slovak
        </option>
        <option
          data-testid="select-option"
          value="es"
        >
          Spanish
        </option>
        <option
          data-testid="select-option"
          value="sv"
        >
          Swedish
        </option>
        <option
          data-testid="select-option"
          value="th"
        >
          Thai
        </option>
        <option
          data-testid="select-option"
          value="tr"
        >
          Turkish
        </option>
        <option
          data-testid="select-option"
          value="vi"
        >
          Vietnamese
        </option>
      </select>
    </div>
    <div
      class="table-container"
    >
      <table
        class="table table-borderless"
      >
        <thead>
          <tr>
            <td
              class="columnName"
            >
               
              InFlow
               
            </td>
            <td
              class="columnName"
            >
               
              OutFlow
               
            </td>
            <td
              class="columnName"
            >
               
              Amount
               
            </td>
            <td>
              <button
                class="btn btn-success"
                type="button"
              >
                ADD
              </button>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="stocks"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Savings"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="25"
              />
            </td>
            <td>
              <button
                class="btn btn-danger"
                type="button"
              >
                DEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Gold"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="Savings"
              />
            </td>
            <td>
              <input
                class="form-control"
                placeholder=""
                value="10"
              />
            </td>
            <td>
              <button
                class="btn btn-danger"
                type="button"
              >
                DEL
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="mt-5 mb-5"
    />
  </div>
</div>
`;
